fix: corrige porta de conexão do Faturamento e ajusta formato do logger no appsettings.json

--- a/SistemaKorp/EstoqueService/src/Estoque.API/appsettings.json
+++ b/SistemaKorp/EstoqueService/src/Estoque.API/appsettings.json
@@ -22,7 +22,7 @@
       {
         "Name": "File",
         "Args": {
-          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
+          "formatter": "Serilog.Formatting.Compact.RenderedCompactJsonFormatter, Serilog.Formatting.Compact",
           "path": "logs/estoque-.json",
           "rollingInterval": "Day"
         }
