--- a/SistemaKorp/FaturamentoService/src/Faturamento.API/appsettings.json
+++ b/SistemaKorp/FaturamentoService/src/Faturamento.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "FaturamentoConnection": "Host=localhost;Port=5433;Database=faturamento_db;Username=postgres;Password=;"
+    "FaturamentoConnection": "Host=localhost;Port=5432;Database=faturamento_db;Username=postgres;Password=;"
   },
   "EstoqueService": {
     "BaseUrl": "http://localhost:5001"
@@ -25,7 +25,7 @@
       {
         "Name": "File",
         "Args": {
-          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
+          "formatter": "Serilog.Formatting.Compact.RenderedCompactJsonFormatter, Serilog.Formatting.Compact",
           "path": "logs/faturamento-.json",
           "rollingInterval": "Day"
         }
